--- a/src/main/resources/templates/bill/billForm.html
+++ b/src/main/resources/templates/bill/billForm.html
@@ -43,7 +43,7 @@
         </div>
         <div>
             <button type="submit" class="button">저장</button>
-            <a href="http://localhost:8080/" class="button">홈</a>
+            <a href="http://http://52.78.242.230:8080//" class="button">홈</a>
         </div>
     </form>
 </div>
