--- a/src/main/resources/templates/money/moneyListForm.html
+++ b/src/main/resources/templates/money/moneyListForm.html
@@ -58,7 +58,7 @@
     </table>
 </div>
 <div>
-    <a href="http://localhost:8080/" class="button">홈</a>
+    <a href="http://http://52.78.242.230:8080//" class="button">홈</a>
 </div>
 </body>
 </html>
