--- a/src/main/resources/templates/money/moneyForm.html
+++ b/src/main/resources/templates/money/moneyForm.html
@@ -66,7 +66,7 @@
         <div>
 <!--            <button type="submit" class="button">저장</button>-->
             <button type="button" class="button" onclick="showConfirmation()">저장</button>
-            <a href="http://52.78.242.230:8080/" class="button">홈</a>
+            <a href="https://52.78.242.230:8080/" class="button">홈</a>
         </div>
     </form>
 </div>
