~ public IP로 주소 전체 변경 return /제거 로 변경

--- a/src/main/resources/templates/money/moneyListForm.html
+++ b/src/main/resources/templates/money/moneyListForm.html
@@ -58,7 +58,7 @@
     </table>
 </div>
 <div>
-    <a href="https://52.78.242.230:8080/" class="button">홈</a>
+    <a href="/" class="button">홈</a>
 </div>
 </body>
 </html>
