--- a/src/main/resources/templates/money/moneyForm.html
+++ b/src/main/resources/templates/money/moneyForm.html
@@ -39,28 +39,33 @@
     <form role="form" method="post" th:object="${moneyFormDto}">
         <div>
             <span>채무자</span>
-            <select name="billId" id="billIdSelect">
+            <select th:field="*{billId}">
                 <option value="">채무자 선택</option>
                 <option th:each="bill : ${bills}"
                         th:value="${bill.id}"
                         th:text="${bill.name}"/>
             </select>
+            <span th:if="${#fields.hasErrors('billId')}" th:errors="*{billId}"></span>
         </div>
         <div>
             <span>빌린 사유</span>
             <input type="text" th:field="*{borrowItemName}" placeholder="빌린 사유를 입력해주세요"/>
+            <span th:if="${#fields.hasErrors('borrowItemName')}" th:errors="*{borrowItemName}"></span>
         </div>
         <div>
             <span>빌린 돈</span>
             <input type="number" th:field="*{borrowMoney}" placeholder="빌린 돈을 입력해주세요"/>
+            <span th:if="${#fields.hasErrors('borrowMoney')}" th:errors="*{borrowMoney}"></span>
         </div>
         <div>
             <span>갚은 사유</span>
             <input type="text" th:field="*{payItemName}" placeholder="빌린 사유를 입력해주세요"/>
+            <span th:if="${#fields.hasErrors('payItemName')}" th:errors="*{payItemName}"></span>
         </div>
         <div>
             <span>갚은 돈</span>
             <input type="number" th:field="*{payMoney}" placeholder="갚은 돈을 입력해주세요"/>
+            <span th:if="${#fields.hasErrors('payMoney')}" th:errors="*{payMoney}"></span>
         </div>
 
         <div>
@@ -72,7 +77,7 @@
 </div>
 <script>
     function showConfirmation() {
-        const billIdSelect = document.querySelector('#billIdSelect');
+        const billIdSelect = document.querySelector('#billId');
         const selectedBillOption = billIdSelect.options[billIdSelect.selectedIndex];
         const selectedBillName = selectedBillOption.textContent;
         const borrowItemName = document.querySelector('input[name="borrowItemName"]').value;
