--- a/src/main/resources/templates/bill/billForm.html
+++ b/src/main/resources/templates/bill/billForm.html
@@ -1,52 +1,21 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>TITLE</title>
-</head>
-<style>
-    /* 공통 버튼 스타일 */
-    .button {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #0074d9; /* 배경색 지정 */
-        color: #fff; /* 텍스트 색상 지정 */
-        text-decoration: none; /* 밑줄 제거 */
-        border-radius: 5px; /* 둥근 모서리 설정 */
-        cursor: pointer; /* 마우스 커서를 포인터로 변경 (선택 사항) */
-        border: none; /* 버튼의 테두리 제거 */
-    }
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
+      layout:decorate="~{layouts/layout1}">
 
-    /* 버튼에 호버 효과 추가 */
-    .button:hover {
-        background-color: #0056b3; /* 호버 시 배경색 변경 */
-    }
-
-    /* 링크 스타일 */
-    a.button {
-        text-decoration: none; /* 밑줄 제거 */
-        color: #fff; /* 텍스트 색상 지정 */
-    }
-
-    /* 링크 호버 효과 추가 */
-    a.button:hover {
-        text-decoration: none; /* 호버 시 밑줄 제거 */
-        color: #fff; /* 호버 시 텍스트 색상 변경 (선택 사항) */
-    }
-</style>
-<body>
-<div>
-    <form role="form" method="post" th:object="${billFormDto}">
-        <div>
-            <span>채무자</span>
-            <input type="text" th:field="*{name}" placeholder="채무자 이름을 입력해주세요">
-            <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
-        </div>
-        <div>
-            <button type="submit" class="button">저장</button>
-            <a href="/" class="button">홈</a>
-        </div>
-    </form>
+<div layout:fragment="content">
+    <div>
+        <form role="form" method="post" th:object="${billFormDto}">
+            <div>
+                <span>채무자</span>
+                <input type="text" th:field="*{name}" placeholder="채무자 이름을 입력해주세요">
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+            </div>
+            <div>
+                <button type="submit" class="button">저장</button>
+            </div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        </form>
+    </div>
 </div>
-</body>
 </html>
