--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,63 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-</head>
-<style>
-    /* 공통 버튼 스타일 */
-    .button {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #0074d9; /* 배경색 지정 */
-        color: #fff; /* 텍스트 색상 지정 */
-        text-decoration: none; /* 밑줄 제거 */
-        border-radius: 5px; /* 둥근 모서리 설정 */
-        cursor: pointer; /* 마우스 커서를 포인터로 변경 (선택 사항) */
-        border: none; /* 버튼의 테두리 제거 */
-    }
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
+      layout:decorate="~{layouts/layout1}">
 
-    /* 버튼에 호버 효과 추가 */
-    .button:hover {
-        background-color: #0056b3; /* 호버 시 배경색 변경 */
-    }
-
-    /* 링크 스타일 */
-    a.button {
-        text-decoration: none; /* 밑줄 제거 */
-        color: #fff; /* 텍스트 색상 지정 */
-    }
-
-    /* 링크 호버 효과 추가 */
-    a.button:hover {
-        text-decoration: none; /* 호버 시 밑줄 제거 */
-        color: #fff; /* 호버 시 텍스트 색상 변경 (선택 사항) */
-    }
-</style>
-<body>
-<div>
-    <a href="/bill/new" class="button">채무자 등록</a>
-    <a href="/money/new" class="button">금액 입력</a>
+<div layout:fragment="content">
+<!--    <div>-->
+<!--        <a href="/bill/new" class="button">채무자 등록</a>-->
+<!--        <a href="/money/new" class="button">금액 입력</a>-->
+<!--    </div>-->
+<!-- header로 옮김~~~ -->
+    <div>
+        <table>
+            <thead>
+            <tr>
+                <th>채무자</th>
+                <th>총 빌린 돈</th>
+                <th>총 갚은 돈</th>
+                <th>갚아야 할 돈</th>
+                <th>내역 확인</th>
+            </tr>
+            </thead>
+            <tr th:each="Money : ${lastMoney}">
+                <td th:text="${Money.getBill().getName()}">채무자</td>
+                <td th:text="${Money.getBorrowMoneyAll()}">총 빌린 돈</td>
+                <td th:text="${Money.getPayMoneyAll()}">총 갚은 돈</td>
+                <td th:text="${Money.getRemainMoney()}">갚아야 할 돈</td>
+                <!--        중간에 수정이나 삭제하게되면 어떻게 되는거지...? -->
+                <td><a th:href="@{'/money/list/' + ${Money.getBill().getId()}}">확인</a></td>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div>
+        필독<br>
+        TEST용 웹 페이지<br>
+        관리자 - ID : money@money.com / PW : 15131513<br>
+        채무자 및 금액을 입력하고 싶으면 위의 관리자 아이디로 접속해야 가능하다.<br>
+        그 외 ID는 회원가입은 되지만 그냥 회원 가입만 가능하다.<br>
+    </div>
 </div>
-<div>
-    <table>
-        <thead>
-        <tr>
-            <th>채무자</th>
-            <th>총 빌린 돈</th>
-            <th>총 갚은 돈</th>
-            <th>갚아야 할 돈</th>
-            <th>내역 확인</th>
-        </tr>
-        </thead>
-        <tr th:each="Money : ${lastMoney}">
-            <td th:text="${Money.getBill().getName()}">채무자</td>
-            <td th:text="${Money.getBorrowMoneyAll()}">총 빌린 돈</td>
-            <td th:text="${Money.getPayMoneyAll()}">총 갚은 돈</td>
-            <td th:text="${Money.getRemainMoney()}">갚아야 할 돈</td>
-    <!--        중간에 수정이나 삭제하게되면 어떻게 되는거지...? -->
-            <td><a th:href="@{'/money/list/' + ${Money.getBill().getId()}}">확인</a></td>
-        </tr>
-    </table>
-</div>
-</body>
 </html>
