--- a/src/main/resources/templates/money/moneyListForm.html
+++ b/src/main/resources/templates/money/moneyListForm.html
@@ -1,64 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>TITLE</title>
-</head>
-<style>
-    /* 공통 버튼 스타일 */
-    .button {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #0074d9; /* 배경색 지정 */
-        color: #fff; /* 텍스트 색상 지정 */
-        text-decoration: none; /* 밑줄 제거 */
-        border-radius: 5px; /* 둥근 모서리 설정 */
-        cursor: pointer; /* 마우스 커서를 포인터로 변경 (선택 사항) */
-        border: none; /* 버튼의 테두리 제거 */
-    }
-
-    /* 버튼에 호버 효과 추가 */
-    .button:hover {
-        background-color: #0056b3; /* 호버 시 배경색 변경 */
-    }
-
-    /* 링크 스타일 */
-    a.button {
-        text-decoration: none; /* 밑줄 제거 */
-        color: #fff; /* 텍스트 색상 지정 */
-    }
-
-    /* 링크 호버 효과 추가 */
-    a.button:hover {
-        text-decoration: none; /* 호버 시 밑줄 제거 */
-        color: #fff; /* 호버 시 텍스트 색상 변경 (선택 사항) */
-    }
-</style>
-<body>
-<div>
-    <table>
-        <thead>
-        <tr>
-            <th>채무자</th>
-            <th>빌린 사유</th>
-            <th>빌린 돈</th>
-            <th>갚은 사유</th>
-            <th>갚은 돈</th>
-            <th>갚아야 할 돈</th>
-        </tr>
-        </thead>
-        <tr th:each="list : ${moneyList}">
-            <td th:text="${list.getBill().getName()}">채무자</td>
-            <td th:text="${list.getBorrowItemName()}">빌린 사유</td>
-            <td th:text="${list.getBorrowMoney()}">빌린 돈</td>
-            <td th:text="${list.getPayItemName()}">갚은 사유</td>
-            <td th:text="${list.getPayMoney()}">갚은 돈</td>
-            <td th:text="${list.getRemainMoney()}">갚아야 할 돈</td>
-        </tr>
-    </table>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
+      layout:decorate="~{layouts/layout1}">
+<div layout:fragment="content">
+    <div>
+        <table>
+            <thead>
+            <tr>
+                <th>채무자</th>
+                <th>빌린 사유</th>
+                <th>빌린 돈</th>
+                <th>갚은 사유</th>
+                <th>갚은 돈</th>
+                <th>갚아야 할 돈</th>
+            </tr>
+            </thead>
+            <tr th:each="list : ${moneyList}">
+                <td th:text="${list.getBill().getName()}">채무자</td>
+                <td th:text="${list.getBorrowItemName()}">빌린 사유</td>
+                <td th:text="${list.getBorrowMoney()}">빌린 돈</td>
+                <td th:text="${list.getPayItemName()}">갚은 사유</td>
+                <td th:text="${list.getPayMoney()}">갚은 돈</td>
+                <td th:text="${list.getRemainMoney()}">갚아야 할 돈</td>
+            </tr>
+        </table>
+    </div>
 </div>
-<div>
-    <a href="/" class="button">홈</a>
-</div>
-</body>
 </html>
