--- a/src/main/resources/templates/money/moneyListForm.html
+++ b/src/main/resources/templates/money/moneyListForm.html
@@ -16,7 +16,7 @@
             </tr>
             </thead>
             <tr th:each="list : ${moneyList}">
-                <td th:text="${list.getBill().getName()}">채무자</td>
+                <td th:text="${list.getRegistreBill().getBill().getName()}">채무자</td>
                 <td th:text="${list.getBorrowItemName()}">빌린 사유</td>
                 <td th:text="${list.getBorrowMoney()}">빌린 돈</td>
                 <td th:text="${list.getPayItemName()}">갚은 사유</td>
