로그인 요청 redirect 생성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="/money/new">금액 입력</a>
                 </li>
                 <li class="nav-item" sec:authorize="true">
-                    <a class="nav-link" href="/freeBoard">자유 게시판</a>
+                    <a class="nav-link" href="/freeBoard" onclick="order()">자유 게시판</a>
                 </li>
                 <li class="nav-item" sec:authorize="true">
                     <a class="nav-link" href="/upBoard">등업 게시판</a>
