--- a/src/main/resources/templates/upBoard/upBoardList.html
+++ b/src/main/resources/templates/upBoard/upBoardList.html
@@ -4,14 +4,48 @@
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
       layout:decorate="~{layouts/layout1}">
 
+<head>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+</head>
+
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+
+        function newContent(){
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/upBoard/newContent";
+
+            $.ajax({
+                url      : url,
+                type     : "GET",
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                cache   : false,
+                success  : function(result, status){
+                    location.href='/upBoard/new';
+                },
+                error : function(jqXHR, status, error){
+                    if(jqXHR.status == 401){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        alert(jqXHR.responseText);
+                    }
+                }
+            });
+        }
+    </script>
+</th:block>
+
 <div layout:fragment="content">
 
-    <button sec:authorize="isAuthenticated()">
-        <a href="/upBoard/new">게시글 작성</a>
-    </button>
-    <button sec:authorize="isAuthenticated()">
-        <a href="/upBoard/new">등업 요청</a>
-    </button>
+    <button onclick="newContent()">게시글 작성</button>
+    <button onClick="upgrade()">등업 요청</button>
 
     <div>
         <table>
