역할에 따른 사용가능 범위 지정 완료 및 등업 게시판 및 관리자 전용 페이지 완성 (css가 상당히 부족)

--- a/src/main/resources/templates/freeBoard/freeBoardList.html
+++ b/src/main/resources/templates/freeBoard/freeBoardList.html
@@ -33,7 +33,10 @@
                     if(jqXHR.status == 401){
                         alert('로그인 후 이용해주세요');
                         location.href='/members/login';
-                    } else{
+                    } else if (jqXHR.status == 418) {
+                        alert('등업 후 이용해주세요');
+                        location.href = '/upBoard';
+                    } else {
                         alert(jqXHR.responseText);
                     }
                 }
