--- a/src/main/resources/templates/upBoard/upBoardList.html
+++ b/src/main/resources/templates/upBoard/upBoardList.html
@@ -33,19 +33,31 @@
                     if(jqXHR.status == 401){
                         alert('로그인 후 이용해주세요');
                         location.href='/members/login';
-                    } else{
+                    } else if (jqXHR.status == 418) {
+                        alert('등업 후 이용해주세요');
+                        location.href = '/upBoard';
+                    } else {
                         alert(jqXHR.responseText);
                     }
                 }
             });
         }
+
+        function showPop() {
+            alert("등업 요청 완료!")
+        }
     </script>
+
+
 </th:block>
 
 <div layout:fragment="content">
 
     <button onclick="newContent()">게시글 작성</button>
-    <button onClick="upgrade()">등업 요청</button>
+    <form role="form" method="post">
+        <button sec:authorize="hasAnyAuthority('ROLE_NONE')" onclick="showPop()">등업 요청</button>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    </form>
 
     <div>
         <table>
