내 장부 확인 버튼 생성 완료

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,14 +13,14 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_USER')">
+                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
                     <a class="nav-link" href="/bill/new">채무자 등록</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_USER')">
+                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
                     <a class="nav-link" href="/money/new">금액 입력</a>
                 </li>
                 <li class="nav-item" sec:authorize="true">
-                    <a class="nav-link" href="/freeBoard" onclick="order()">자유 게시판</a>
+                    <a class="nav-link" href="/freeBoard">자유 게시판</a>
                 </li>
                 <li class="nav-item" sec:authorize="true">
                     <a class="nav-link" href="/upBoard">등업 게시판</a>
