--- a/src/main/resources/templates/upBoard/UBContent.html
+++ b/src/main/resources/templates/upBoard/UBContent.html
@@ -3,6 +3,53 @@
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
       layout:decorate="~{layouts/layout1}">
 
+<head>
+    <style>
+        /* Apply custom CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #3498db;
+            color: #fff;
+        }
+
+        td {
+            background-color: #fff;
+        }
+
+        td:nth-child(odd) {
+            background-color: #f2f2f2;
+        }
+
+        td a {
+            text-decoration: none;
+            color: #3498db;
+            font-weight: bold;
+        }
+
+        td a:hover {
+            color: #2980b9;
+        }
+    </style>
+</head>
+
 <div layout:fragment="content">
     <div>
         <table>
