--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,73 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <div th:fragment="header">
+
+    <head>
+        <meta name="_csrf" th:content="${_csrf.token}"/>
+        <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    </head>
+
+    <script th:inline="javascript">
+
+        function billNew() {
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+            var url = "/bill/billNew";
+            $.ajax({
+                url: url,
+                type: "GET",
+                beforeSend: function(xhr) {
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                cache: false,
+                success: function(result, status) {
+                    location.href = '/bill/new';
+                },
+                error: function(jqXHR, status, error) {
+                    if (jqXHR.status == 401) {
+                        alert('로그인 후 이용해주세요');
+                        location.href = '/members/login';
+                    } else if (jqXHR.status == 418) {
+                        alert('등업 후 이용해주세요');
+                        location.href = '/upBoard';
+                    } else {
+                        alert(jqXHR.responseText);
+                    }
+                }
+            });
+        }
+
+        function moneyNew() {
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+            var url = "/money/moneyNew";
+            $.ajax({
+                url: url,
+                type: "GET",
+                beforeSend: function(xhr) {
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                cache: false,
+                success: function(result, status) {
+                    location.href = '/money/new';
+                },
+                error: function(jqXHR, status, error) {
+                    if (jqXHR.status == 401) {
+                        alert('로그인 후 이용해주세요');
+                        location.href = '/members/login';
+                    } else if (jqXHR.status == 418) {
+                        alert('등업 후 이용해주세요');
+                        location.href = '/upBoard';
+                    } else {
+                        alert(jqXHR.responseText);
+                    }
+                }
+            });
+        }
+    </script>
+
     <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
@@ -13,11 +80,17 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
-                    <a class="nav-link" href="/bill/new">채무자 등록</a>
+<!--                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
+<!--                    <a class="nav-link" href="/bill/new">채무자 등록</a>-->
+<!--                </li>-->
+                <li class="nav-item" sec:authorize="true">
+                    <a class="nav-link" onclick="billNew()">채무자 등록</a>
                 </li>
-                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">
-                    <a class="nav-link" href="/money/new">금액 입력</a>
+<!--                <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_USER')">-->
+<!--                    <a class="nav-link" href="/money/new">금액 입력</a>-->
+<!--                </li>-->
+                <li class="nav-item" sec:authorize="true">
+                    <a class="nav-link" onclick="moneyNew()">금액 입력</a>
                 </li>
                 <li class="nav-item" sec:authorize="true">
                     <a class="nav-link" href="/freeBoard">자유 게시판</a>
