--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -98,6 +98,9 @@
                 <li class="nav-item" sec:authorize="true">
                     <a class="nav-link" href="/upBoard">등업 게시판</a>
                 </li>
+                <li class="nav-item" sec:authorize="true">
+                    <a class="nav-link" href="/patch">패치 노트</a>
+                </li>
                 <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
                     <a class="nav-link" href="/upBoard/admin">관리자 전용</a>
                 </li>
