--- a/src/main/resources/templates/freeBoard/FBContent.html
+++ b/src/main/resources/templates/freeBoard/FBContent.html
@@ -30,7 +30,11 @@
             color: #fff;
         }
 
-        td:nth-child(even) {
+        td {
+            background-color: #fff;
+        }
+
+        td:nth-child(odd) {
             background-color: #f2f2f2;
         }
 
@@ -43,6 +47,18 @@
         td a:hover {
             color: #2980b9;
         }
+
+        /* CSS for the div containing long content */
+        .long-content-div {
+            max-width: 100%; /* 최대 너비를 100%로 설정하여 부모 너비에 맞게 조절 */
+            border: 1px solid #ddd; /* 테두리 추가 (선택 사항) */
+            padding: 10px; /* 내용과 테두리 사이 여백 (선택 사항) */
+        }
+
+        /* CSS to make long content wrap within the div */
+        .long-content {
+            word-wrap: break-word;
+        }
     </style>
 </head>
 
@@ -53,15 +69,18 @@
             <tr>
                 <th>작성자</th>
                 <th>제목</th>
-                <th>내용</th>
             </tr>
             </thead>
             <tr th:each="List : ${freeBoard}">
                 <td th:text="${List.getMember().getName()}">작성자</td>
                 <td th:text="${List.getTitle()}">제목</td>
-                <td th:text="${List.getContent()}">내용</td>
             </tr>
         </table>
     </div>
+    <div class="long-content-div">
+        <!-- DB에서 받아온 내용을 <pre> 태그를 사용하여 그대로 표시 -->
+        <pre th:text="${freeBoard.getContent()}" class="long-content"></pre>
+    </div>
 </div>
+
 </html>
