--- a/src/main/resources/templates/patch/patchBoardList.html
+++ b/src/main/resources/templates/patch/patchBoardList.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
+      xmlns:sec="http://www.w3.org/1999/xhtml"
       layout:decorate="~{layouts/layout1}">
 
 <head>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
     <style>
-        /* Apply custom CSS styles here */
+        /* Custom CSS styles */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 0;
+        }
+
+        .button-container {
+            margin-top: 20px;
+            display: flex; /* 버튼을 가로로 정렬하기 위한 스타일 */
+        }
+
+        button {
+            background-color: #3498db;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            margin-right: 10px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #2980b9;
         }
 
         table {
@@ -30,14 +52,6 @@
             color: #fff;
         }
 
-        td {
-            background-color: #fff;
-        }
-
-        td:nth-child(odd) {
-            background-color: #f2f2f2;
-        }
-
         td a {
             text-decoration: none;
             color: #3498db;
@@ -47,40 +61,28 @@
         td a:hover {
             color: #2980b9;
         }
-
-        /* CSS for the div containing long content */
-        .long-content-div {
-            max-width: 100%; /* 최대 너비를 100%로 설정하여 부모 너비에 맞게 조절 */
-            border: 1px solid #ddd; /* 테두리 추가 (선택 사항) */
-            padding: 10px; /* 내용과 테두리 사이 여백 (선택 사항) */
-        }
-
-        /* CSS to make long content wrap within the div */
-        .long-content {
-            word-wrap: break-word;
-        }
     </style>
 </head>
 
 <div layout:fragment="content">
+    <div sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
+        <button onclick="location.href='/patch/new'">게시글 작성</button>
+    </div>
     <div>
         <table>
             <thead>
             <tr>
                 <th>작성자</th>
                 <th>제목</th>
+                <th>내용</th>
             </tr>
             </thead>
-            <tr th:each="List : ${upBoard}">
-                <td th:text="${List.getMember().getName()}">작성자</td>
-                <td th:text="${List.getTitle()}">제목</td>
+            <tr th:each="all : ${patchBoard}">
+                <td th:text="${all.getMember().getName()}">작성자</td>
+                <td th:text="${all.getTitle()}">제목</td>
+                <td><a th:href="@{'/patch/' + ${all.getId()}}">확인</a></td>
             </tr>
         </table>
     </div>
-    <div class="long-content-div">
-        <!-- DB에서 받아온 내용을 <pre> 태그를 사용하여 그대로 표시 -->
-        <pre th:text="${upBoard.getContent()}" class="long-content"></pre>
-    </div>
 </div>
-
 </html>
