--- a/src/main/resources/templates/patch/newContent.html
+++ b/src/main/resources/templates/patch/newContent.html
@@ -74,7 +74,7 @@
 
 <div layout:fragment="content">
     <div>
-        <form role="form" method="post" th:object="${patchBoard}">
+        <form role="form" method="post" th:object="${patchBoardFormDto}">
             <!-- 제목 입력란 -->
             <div>
                 <span>제목</span>
