--- a/src/main/resources/templates/bill/billForm.html
+++ b/src/main/resources/templates/bill/billForm.html
@@ -62,7 +62,7 @@
             <div>
                 <span>채무자</span>
                 <input type="text" th:field="*{name}" placeholder="채무자 이름을 입력해주세요">
-                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"  class="errors"></span>
             </div>
             <div>
                 <button type="submit" class="button">저장</button>
