--- a/src/main/resources/templates/upBoard/newContent.html
+++ b/src/main/resources/templates/upBoard/newContent.html
@@ -74,7 +74,7 @@
 
 <div layout:fragment="content">
     <div>
-        <form role="form" method="post" th:object="${upBoardForm}">
+        <form role="form" method="post" th:object="${upBoardFormDto}">
             <!-- 제목 입력란 -->
             <div>
                 <span>제목</span>
