--- a/src/main/resources/templates/freeBoard/FBContent.html
+++ b/src/main/resources/templates/freeBoard/FBContent.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout xmlns:sec="http://www.w3.org/1999/xhtml"
+      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
+      xmlns:sec="http://www.w3.org/1999/xhtml"
       layout:decorate="~{layouts/layout1}">
+
+
+    <th:block layout:fragment="script">
+        <script th:inline="javascript">
+
+            function deleteContent(freeBoardId){
+                var token = $("meta[name='_csrf']").attr("content");
+                var header = $("meta[name='_csrf_header']").attr("content");
+
+                var url = "/freeBoard/" + freeBoardId + "/delete";
+
+                $.ajax({
+                    url      : url,
+                    type     : "DELETE", // HTTP DELETE 메서드 사용
+                    beforeSend : function(xhr){
+                        /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                        xhr.setRequestHeader(header, token);
+                    },
+                    cache   : false,
+                    success  : function(result, status){
+                        location.href='/freeBoard';
+                    },
+                    error : function(jqXHR, status, error){
+                    }
+                });
+            }
+        </script>
+    </th:block>
+
 
 <div layout:fragment="content">
     <div>
@@ -36,19 +66,30 @@
             </tr>
         </table>
     </div>
+
+<!--    본인만 삭제하는 버튼-->
+<!--    <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">-->
+<!--        <a th:href="@{/freeBoard/{freeBoardId}/delete(freeBoardId=${freeBoard.getId()})}">삭제</a>-->
+<!--    </div>-->
+
+    <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
+        <button th:onclick="'deleteContent(' + ${freeBoard.getId()} + ')'" >삭제</button>
+    </div>
+
     <form role="form" method="post"  th:object="${freeCommentDto}" sec:authorize="hasAnyAuthority('ROLE_USER')">
         <textarea th:field="*{content}" placeholder="내용을 입력해주세요" class="text-area"></textarea>
         <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="errors"></span>
         <button type="submit">댓글 입력</button>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
+
 </div>
 
 
-
-
-
 <head>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+
     <style>
         /* Apply custom CSS styles here */
         body {
